language/move-lang/tests/move_check/expansion/mdot_with_non_address_exp.exp
error: 

   ┌── tests/move_check/expansion/mdot_with_non_address_exp.move:9:13 ───
   │
 9 │         01u8::X::bar()
   │             ^^ Unexpected '::'
   ·
 9 │         01u8::X::bar()
   │             -- Expected ';'
   │

